tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-1.snap
stdout = ''
stderr = '''
error: cannot find `f` in scope
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-1.fathom:3:1
  │
3 │ f x
  │ ^ unbound name

error: cannot find `x` in scope
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-1.fathom:3:3
  │
3 │ f x
  │   ^ unbound name

error: failed to infer function input type
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-1.fathom:3:1
  │
3 │ f x
  │ ^ unsolved function input type

error: failed to infer function output type
  ┌─ tests/fail/elaboration/unification/mismatch/fun-app-unbound-head-1.fathom:3:1
  │
3 │ f x
  │ ^ unsolved function output type

'''
